force-app/main/default/objects/woo__WoopraSettings__c/woo__WoopraSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Woopra Website Settings</description>
    <label>WoopraSettings</label>
</CustomObject>