force-app/main/default/objects/woo__WoopraSettings__c/fields/woo__Enable_Data_Sync__c.field-meta.xml
<CustomField>
    <fullName>woo__Enable_Data_Sync__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable syncing fields from Salesforce to Woopra</description>
    <inlineHelpText>Enable syncing fields from Salesforce to Woopra</inlineHelpText>
    <label>Enable Data Sync</label>
    <type>Checkbox</type>
</CustomField>