force-app/main/default/objects/woo__WoopraSettings__c/fields/woo__ProfileAccessKey__c.field-meta.xml
<CustomField>
    <fullName>woo__ProfileAccessKey__c</fullName>
    <description>ProfileAccessKey</description>
    <inlineHelpText>ProfileAccessKey</inlineHelpText>
    <label>ProfileAccessKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>