force-app/main/default/objects/woo__WoopraSettings__c/fields/woo__ProfileAccessSecret__c.field-meta.xml
<CustomField>
    <fullName>woo__ProfileAccessSecret__c</fullName>
    <description>ProfileAccessSecret</description>
    <inlineHelpText>ProfileAccessSecret</inlineHelpText>
    <label>ProfileAccessSecret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>