force-app/main/default/objects/woo__WoopraSettings__c/fields/woo__Website__c.field-meta.xml
<CustomField>
    <fullName>woo__Website__c</fullName>
    <description>Website as shown on Woopra.</description>
    <inlineHelpText>Use &quot;business.com&quot; instead of &quot;www.business.com&quot;</inlineHelpText>
    <label>Website</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>